[package]
name = "poll-promise"
version = "0.2.0"
authors = ["Embark <opensource@embark-studios.com>"]
license = "MIT OR Apache-2.0"
description = "Poll the result of an async operation in a game or immediate mode GUI."
edition = "2021"
homepage = "https://github.com/EmbarkStudios/poll-promise"
repository = "https://github.com/EmbarkStudios/poll-promise"
readme = "README.md"
categories = ["asynchronous"]
keywords = ["promise", "poll", "async", "gamedev", "gui"]
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
features = ["tokio", "smol"]

[lib]

[dependencies]
static_assertions = "1.1"
smol =  { version = "1.2.5", optional =  true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"], optional = true }
async-std = { version = "1.12", optional = true }

wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }

[dev-dependencies]
async-net = "1.7.0"

[features]
# Allow spawning a task when running in a web browser.
web = ["wasm-bindgen", "wasm-bindgen-futures"]
smol_tick_poll = []
